# stat362-fa25-final-ai-image-detection

./: .gitignore  README.md  pyproject.toml
code/: mobile_net_3.ipynb
model-attempts/: mobile_net_2.ipynb  mobile_net_3.html  mobile_net_3.ipynb  mobile_net_3_viz.ipynb  mobile_net_4.ipynb  model3withBNandDropout_AA.html
notebooks/: baseline_model.html  baseline_model.ipynb  mobile_net_1.ipynb  mobile_net_4.html  model2afterbaseline_AA.html  model2afterbaseline_AA.ipynb  model3withBNandDropout_AA.ipynb  model4withBNandDropout+extraCNNLayer_AA.html  model4withBNandDropout+extraCNNLayer_AA.ipynb
